# OpenPV.Extension.Template

./: .gitignore  .gitmodules  Ahsoka.Extensions.Template.sln  Ahsoka.Extensions.Template.yml  BSP.Targets  CMakeLists.txt  CMakePresets.json  GitVersion.yml  README.md
.devcontainer/openviewpro/: devcontainer.json
Ahsoka.BuildIInterop/: Ahsoka.BuildInterop.csproj  BSP.Targets  Build_CPP_SDK.sh  CMakeLists.txt
Ahsoka.CreateProto/: Ahsoka.CreateProto.csproj  Program.cs
Ahsoka.Extensions.Template/: Ahsoka.Extensions.Template.csproj  Ahsoka.Extensions.Template.extensioninfo.json  Directory.Build.targets  README.md  VisibleInternals.cs
Ahsoka.Extensions.Template.UX/: Ahsoka.Extensions.Template.UX.csproj  App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  app.manifest
Ahsoka.Extensions.Template.UX/ViewModels/: VideoPlayerConfigViewModel.cs  VideoPlayerViewModel.cs
Ahsoka.Extensions.Template.UX/Views/: VideoPlayerConfig.axaml  VideoPlayerConfig.axaml.cs
Ahsoka.Extensions.Template/Installer/: VideoPlayerConfigurationPlugin.cs
Ahsoka.Extensions.Template/Service/: VideoPlayerImpl.cs  VideoService+Proto.cs  VideoService.cs  VideoServiceClient.cs  VideoServiceMessages.cs  VideoTests.cs
Ahsoka.Extensions.Template/Service/Platform/: DesktopVideoServiceImplementation.cs  LinuxVideoOutOfProcServiceImplementation.cs  LinuxVideoServiceImplementation.cs
Ahsoka.Extensions.Template/Service/gstreamer/: CsiCameraPipeline.cs  FilePipeline.cs  GmslCameraPipeline.cs  GstreamerPipelineBuilder.cs  IPipelineBuilder.cs  UsbCameraPipeline.cs
Ahsoka.Interop/: .gitignore  Build_CPP_SDK_PRO.sh  CMakeLists.txt  Functions.cmake  build_setup.sh  build_setup_pro.sh
Ahsoka.Interop/Ahsoka.Proto/: AudioManager.proto
Ahsoka.Interop/Ahsoka.VideoPlayer/: Ahsoka.VideoPlayer.c  CMakeLists.txt
Ahsoka.Test/: Ahsoka.Test.csproj  AssemblyInitializer.cs  LinearTestBase.cs  VideoServiceTest.cs
Ahsoka.Test/Properties/: CoreTestResources.Designer.cs  CoreTestResources.resx
Ahsoka.Test/Resources/events/: custom.evt
Demos/: Video.Build.props
Demos/Ahsoka.CS.Template/: Ahsoka.CS.Template.csproj  Program.cs
Demos/Ahsoka.CS.Template/Platform_OpenViewPro/: AudioManagerConfiguration.json  OpenView.PackageInfo.json  VideoPlayerConfiguration.json
Demos/Ahsoka.CS.Template/Properties/PublishProfiles/: LinuxProfilePro.pubxml
